  * Remove defunct test suite.
  * Build manual page for fll build tool dynamically based on argparse
    formatted help/usage output.
  * Clean up manual page with distutls clean subcommand.
  * Remove fll_detect_locale_pkgs and manpage, they are not used and
    fll.locales is pending overhaul.
  * Install a ConfigObj spec file for configuration validation.
  * Remove x bit from fll/locales.py.

 -- Kel Modderman <kel@otaku42.de>  Wed, 29 Dec 2010 17:08:47 +1000

python-fll (0.2.2) unstable; urgency=low

  * drop obsolete test2_apt_sources.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 20 Sep 2010 22:35:01 +0200

python-fll (0.2.1) unstable; urgency=low

  * Update for python2.6. Add a dist_upgrade method to aptlib.
  * Add k3b mappting to data/locales-pkg-map.

 -- Kel Modderman <kel@otaku42.de>  Sun, 19 Sep 2010 10:21:03 +1000

python-fll (0.2.0) unstable; urgency=low

  * switch to aptosid.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 29 Aug 2010 20:53:48 +0200

python-fll (0.1.4) unstable; urgency=low

  * switch to compat level 8.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Aug 2010 04:51:14 +0200

python-fll (0.1.3) unstable; urgency=low

  * bump standards version to 3.9.1, no changes necessary.
  * stop building modules for python-2.5, as doing so would require to add
    python-2.5 to build-depends.
  * elaborate long description a bit further, to make lintian happy.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 04 Aug 2010 00:01:28 +0200

python-fll (0.1.2) unstable; urgency=low

  * rebuild for python1.6 as default python version in Debian.
  * switch from python-central to python-support.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jun 2010 13:35:50 +0200

python-fll (0.1.1) unstable; urgency=low

  [ Niall Walsh ]
  * Switch from kde-minimal to kde-plasma-* to drive kde-l10n.

  [ Kel Modderman ]
  * Fix test suite for upload.

  [ Stefan Lippers-Hollmann ]
  * add myself to Uploaders.