@@ -9,7 +9,7 @@
 # configuration examples.
 # Dir (alias RootDir) and Architecture are handled by the fll.apt.Apt class.
 
-APT::Install-Recommends = false
+#APT::Install-Recommends = false
 #Acquire::http::Proxy	= 'http://localhost:9999'
 
 ##############################################################################
@@ -23,30 +23,35 @@ APT::Install-Recommends = false
 # filename for the list (eg. /etc/apt/sources.list.d/<name>.list).
 #
 # Fields:-
-# description - One line description of repository
-# uri         - Repository URI / location (eg. "http://ftp.us.debian.org/")
-# cached_uri  - A cached URI which is functionally equivalent to the uri field
-#		(It will be used and substituted for 'uri' in the final stages
-#		of chroot cleanup.)
-# suite       - suite name(s) (eg. "sid" or "sid experimental")
-# components  - repository components (eg. "main" or "main contrib non-free")
-# keyring     - name of package containing gpg key required for authentication
-# gpgkey      - 8 character gpg keyid (fetchable from keyserver) 
+# description - One line description of repository.
+# uri         - Repository URI / location (eg. "http://ftp.us.debian.org/").
+# cached_uri  - A cached URI which is functionally equivalent to the uri field.
+#		It will be used instead of 'uri' until the final stages of
+#		chroot cleanup.
+# suite       - Suite name(s) (eg. "sid" or "sid experimental").
+# components  - Repository components (eg. "main" or "main contrib non-free").
+# keyring     - Name of package containing gpg key required for authentication
+# gpgkey      - 8 character gpg keyid fetchable from keyserver
 #		or
 #		absolute filename to exported public key
 #		or
 #		http/ftp URI to exported public key
 
-[[[ 'debian' ]]]
-description	= Debian GNU/Linux apt repository
-uri		= http://ftp.de.debian.org/debian/
-suite		= sid
-components	= main
+# These are the defaults for the Debian repository, uncomment and modify as
+# required.
+#
+#[[[ 'debian' ]]]
+#description	= Debian GNU/Linux apt repository
+#uri		= http://cdn.debian.net/debian/
+#suites		= sid
+#components	= main
 
+# Repository containing FULLSTORY Live Linux utilities.
+#
 [[[ 'aptosid' ]]]
 description	= aptosid apt repository
 uri		= http://aptosid.com/debian/
-suite		= sid
+suites		= sid
 components	= main fix.main
 keyring		= aptosid-archive-keyring
 
